# AFDM

afdm_nr/: CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MANIFEST.in  README.md  pyproject.toml  run_all.py
afdm_nr/afdm_isac/: __init__.py  channel.py  links.py  params.py  plotstyle.py  resource.py  sensing.py  waveforms.py
afdm_nr/experiments/: fig10_prr.py  fig3_ber_vs_snr.py  fig4_papr_ccdf.py  fig5_nmse_vs_snr.py  fig6_se_vs_velocity.py  fig7_sensing_rmse.py  fig8_ablation.py  fig9_collision.py  table2_pd_sensitivity.py
