[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "afdm-nr-v2x-isac"
version = "1.0.0"
description = "Reproducibility code for AFDM-based ISAC in NR-V2X Mode 2 sidelink (IEEE Access)."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [
    { name = "Surendra Kota" },
    { name = "Pudi Dhilleswararao" },
]
keywords = ["AFDM", "ISAC", "NR-V2X", "sidelink", "OTFS", "OFDM", "radar", "6G"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "numpy>=1.23",
    "scipy>=1.9",
    "matplotlib>=3.6",
]

[project.urls]
"Paper" = "https://ieeexplore.ieee.org/"
"Repository" = "https://github.com/<author-repository>"

[tool.setuptools]
packages = ["afdm_isac"]
